style.css
/*commonly shared elements*/

.worktitles,
nav,
.notfound,
p,
h2,
a,
h3 {
  text-align: center;
  color: white;
}

/*list color*/

li {
  color: white;
}

main div ol li {
  list-style: none;
  margin-right: 40px;
}

/*class for 404 error message number*/

.notfound {
  color: white;
  font-size: 100px;
  font-family: Jazz LET, fantasy;
  margin-top: 100px;
  margin-bottom: 100px;
  background-color: black;
  width: 70%;
  height: auto;
  margin: auto;
  margin-top: -8px;
  padding-top: 10px;
  padding-bottom: 10px;
}

/*for image sizing*/

img {
  width: 50%;
  height: auto;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

/*style for nav*/
header {
  background-color: black;
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
}

header nav {
  display: flex;
  justify-content: center;
}

header nav ul {
  display: flex;
  list-style: none;
  padding-left: 0;
}

header nav ul li a {
  text-decoration: none;
  margin-right: 20px;
  font-size: 30px;
}

/*make nav not look like links*/

a {
  text-decoration: none;
}

/*coloring for nav*/
a:link {
  color: white;
}
a:visited {
  color: white;
}
a:hover {
  color: red;
}
a:active {
  color: red;
}

/*style for list of apps made and icons*/

.worktitles {
  font-size: 40px;
  font: bold;
}

/*styling for the head of every page*/

h1 {
  background-color: rgb(41, 35, 65);
  width: 70%;
  height: auto;
  margin: auto;
  margin-top: -8px;
  font-size: 70px;
  padding-top: 10px;
  padding-bottom: 10px;
}

/*for secret lettering*/

.secret {
  font-size: 10px;
}

/*up the h3 size*/

h3 {
  font-size: 40px;
}

/*body background color*/

body {
  background-image: url("images/pagebackground.jpg");
  background-size: cover;
}

main {
  background-color: black;
  width: 70%;
  height: auto;
  margin: auto;
}

/*styling for footer*/

footer {
  background-color: black;
}

footer div ul {
  display: flex;
  list-style: none;
}

footer div ul li {
  flex-grow: 0.1;
  width: 1px;
  align-self: right;
  justify-content: right;
  margin-left: 0;
}

/*style for links for projects*/

.projectlinks {
  text-align: center;
}

h1 {
  color: white;
  text-align: center;
  font-size: 60px;
}

@media all and (max-width: 800px) {
  h1 {
    font-size: 40px;
  }
  header nav ul li a {
    font-size: 20px;
  }
  h3 {
    font-size: 30px;
  }
  .notfound {
    font-size: 70px;
  }
  img {
    width: 40%;
  }
  .worktitles {
    font-size: 30px;
  }
  p,
  a,
  h2 {
    font-size: 80%;
  }
  main div ul li {
    font-size: 80%;
  }
}

@media all and (max-width: 600px) {
  h1 {
    font-size: 20px;
  }
  header nav ul li a {
    font-size: 10px;
  }
  h3 {
    font-size: 20px;
  }
  .notfound {
    font-size: 40px;
  }
  img {
    width: 30%;
  }
  .worktitles {
    font-size: 20px;
  }
  p,
  a,
  h2 {
    font-size: 60%;
  }
  main div ul li {
    font-size: 60%;
  }
}

